frame/support/test/tests/benchmark_ui/bad_return_type_non_result.stderr
error: expected either BenchmarkResult<T> or Result<T, BenchmarkError>
  --> tests/benchmark_ui/bad_return_type_non_result.rs:10:31
   |
10 |     fn bench(y: Linear<1, 2>) -> String {
   |                                  ^^^^^^
